syntax = "proto3";
package request;
option go_package = "douyin/proto/follow/request";

message douyin_relation_action_request {
  int64 to_user_id = 1;
  int64 login_user_id = 2;
  int32 action_type = 3;
}

message douyin_relation_follow_list_request {
  int64 user_id = 1;
  int64 login_user_id = 2;
}

message douyin_relation_follower_list_request {
  int64 user_id = 1;
  int64 login_user_id = 2;
}

message douyin_relation_friend_list_request {
  int64 user_id = 1;
  int64 login_user_id = 2;
}

message douyin_follow_follower_count_request {
  int64 user_id = 1;
}

message douyin_follow_follower_list_count_request {
  repeated int64 user_id = 1;
}

message douyin_get_follow_request {
  int64 user_id = 1;
  int64 to_user_id = 2;
}

message douyin_get_follow_list_request {
  int64 user_id = 1;
  repeated int64 to_user_id = 2;
}

message douyin_get_follow_follower_id_list_request {
  repeated int64 user_id = 1;
}
